assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Alex+Brush&family=Caveat+Brush&family=Water+Brush&display=swap');

/* Overriding page styles */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}
/*makes scrolling less agressive*/
html {
    scroll-behavior: smooth;
}

body {
    /* General styles */
    display: flex;
    flex-direction: column;
    min-height: 100vh;
    background-color: #f8f8f8
}
header {
    background-color: rgb(208, 197, 174);
    padding: 0rem 0.5rem;
    position: fixed;
    z-index: 99;
    width: 100%;
    box-shadow: 0 2px 2px rgb(12, 12, 12);
    display: flex;
    align-items: baseline;
    justify-content: space-between;
} 
header > a > h2 {
    font-family: 'alex brush', Arial;
    font-size: 12px;
    font-weight: 400;
    text-decoration: underline;
    text-decoration-thickness: 1px;
    text-decoration-skip-ink: auto;
    margin-top: -10px;
    padding: 0rem 0.5rem;
}
#logo {
    font-family: 'alex brush', Arial;
    font-weight: 300;
    text-decoration: underline;
    text-decoration-thickness: 1px;
    text-decoration-skip-ink: auto;
}
#menu {
    font-size: 115%;
    letter-spacing: 4px;
    list-style-type: none;
}
#menu > li {
    margin-bottom: 0.5rem;
}
header a {
    text-decoration: none;
    color: inherit;
    font-family: 'alex brush', sans-serif;
    font-weight: 600;
}
nav {
    position: absolute;
    background: rgb(208, 197, 174);
    width: 100%;
    left: 0;
    box-shadow: 0 2px 2px rgb(12, 12, 12);
    padding: 0 .5rem;
    display: none;
    top: 100%;
}
#nav-toggle:checked~nav {
    display: block;
}
#nav-toggle {
    display: none;
}
.nav-toggle-label {
    font-size: 2rem;
}

#bio {
    font-family: 'caveat brush', sans-serif;
    font-size: 14px;
    text-align: center;
    padding: 20px 20px 0px 20px;
    background-color: #f8f8f8;
}

#logo-image {
    height: 150px;
    width: 150px;
    display: block;
    border-radius: 10%;
    margin-left: auto;
    margin-right: auto;
}

#treatments-£  {
    font-family: 'caveat brush', sans-serif;
    text-align: center;
    font-size: 22px;
    background-color: rgb(208, 197, 174);
}
#treatments-£ > li {
    font-family: 'caveat brush', sans-serif;
    font-size: 15px;
    text-align: center;
    background-color: rgb(208, 197, 174);
    padding: 2px;
    margin-bottom: 0px;
}
main {
    background-color: #f8f8f8;
    flex: 1 0 auto;
    margin-top: 55px;
    margin-bottom: 20px;
}
#form-section {
    padding-bottom: 20px;
    width: 100%;
}
#form-section > form > h2 {
    font-family: 'caveat brush', sans-serif;
    text-align: center;
}
#form {
    text-align: center;
    color: black;
}
#form > label {
    font-family: 'caveat brush', sans-serif;
}
#name, #email {
    font-family: 'caveat brush', sans-serif;
    background-color: rgb(208, 197, 174);
    padding: 2px;
    width: 50%;
    margin: 10px;
}
#submit {
    font-family: 'caveat brush', sans-serif;
    background-color: rgb(208, 197, 174);
    padding: 1px;
    color: black;
}
#qualified {
    font-family: 'caveat brush', sans-serif;
    font-size: 15px;
    background-color: rgb(208, 197, 174);
    padding: 2px;
    text-align: center;
}
#logo-images {
    display: flex;
    justify-content: space-evenly;
}
#qualified-logo1 > img {
    height: 60px;
    width: 170px;
    margin: 1px;
    border-radius: 10%;
}  
#qualified-logo2 > img {
    height: 60px;
    width: 100px;
    margin-top: 1px;
    border-radius: 10%;
}
#social-networks {
    background-color: rgb(208, 197, 174);
    text-align: center;
    list-style-type: none;
    padding: 15px 0;
    display: flex;
    justify-content: space-evenly;
    width: 100%;
} 
#social-networks  i {
    font-size: 200%;
}
footer {
    box-shadow: 0 0 0 2px rgb(12, 12, 12);
}
/* Gallery & Review page*/
/* Gallery */
.gallery-section > h3 {
    font-family: 'alex brush', sans-serif;
    font-size: 22px;
    text-align: center;
    padding-top: 1px;
    letter-spacing: 2px;
}
#gallery > img {
    background-color: rgb(208, 197, 174);
    padding: 7px;
    text-align: center;
    flex-basis: 200px;
    flex-grow: 1;
    width: 100%;
}
#gallery {
    line-height: 1.5em;
}
/* Review */
.review-section > h3 {
    font-family: 'alex brush', sans-serif;
    font-size: 22px;
    text-align: center;
    letter-spacing: 2px;
}
#review > img {
    width: 100%;
    padding: 5px;
    background-color: rgb(208, 197, 174);
}
#review {
    line-height: 1.5rem;
}
.thank-you {
    text-align: center;
    background-color: rgb(208, 197, 174);
    padding: 20px;
    letter-spacing: 1.5px;
    padding-top: 35px;
}

/* Media Query for Tablets and larger */
@media screen and (min-width:768px) {
    /* header */
    nav {
        display: block;
        position: relative;
        box-shadow: none;
        width: fit-content;
        padding: .5rem;
        justify-content: space-between;
    }
    header a {
        text-decoration: none;
        color: inherit;
        font-family: 'alex brush', sans-serif;
        font-weight: 600;
        font-size: 16px;
    }
    header > a > h2 {
        font-family: 'alex brush', Arial;
        font-size: 28px;
        font-weight: 500;
        margin: 0rem 0.5rem;
    }
    #menu {
        display: flex;
    }
    #menu > li {
        padding-left: 1rem;
    }
    .nav-toggle-label {
        display: none;
    }
    #logo {
        font-size:300%;
        line-height: 75px;
        margin: 0 1rem;
    }
    main {
        background-color: #f8f8f8;
        flex: 1 0 auto;
        margin-top: 80px;
    }
    #bio {
        font-family: 'caveat brush', sans-serif;
        font-size: 30px;
        text-align: center;
        background-color: #f8f8f8;
        margin-top: 25px;
        padding: 40px;
    }
    #logo-image {
        height: 400px;
        width: 400px;
        display: flex;
    }
    #treatments-£ {
        font-family: 'caveat brush', sans-serif;
        text-align: center;
        font-size: 45px;
        background-color: rgb(208, 197, 174);
    }
    #treatments-£ > li {
        font-family: 'caveat brush', sans-serif;
        font-size: 30px;
        text-align: center;
        background-color: rgb(208, 197, 174);
    }
    #name, #email {
        width: 30%;
    }
    #qualified {
        font-size: 30px;
        margin-top: 20px;
        margin-bottom: 0px;
    }
    #qualified-logo1>img {
        height: 150px;
        width: 450px;
        margin: 5px;
    }
    #qualified-logo2>img {
        height: 150px;
        width: 300px;
        margin: 5px;
    }
    /* Gallery & Review page*/
    /* Gallery */
    .gallery-section > h3 {
        font-size: 40px;
        padding-top: 1em;
    } 
    #gallery > img {
        padding: 50px;
    } 
    #gallery {
        line-height: 3rem;
    }

    /* Review */
    .review-section > h3 {
        font-size: 40px;
    }
    #review > img {
        padding: 50px;
    }
    #review {
        line-height: 3rem;
    }

    /* Footer */
    #social-networks i {
        font-size: 300%;
    }
    .thank-you {
        margin-top: 30px;
        font-size: 40px;
    }
}
/* Media Query for Laptops and larger */
@media screen and (min-width:992px) {
    /* Heading */
    nav {
        padding: 0.5rem;
        justify-content: space-between;
    }
    header a {
        font-size: 23px;
    }
    header > a > h2 {
        font-size: 30px;
        font-weight: 600;
    }
    #menu {
        letter-spacing: 2px;
    }
    #menu > li {
        padding-left: 2rem;
    }
    /* Bio section */
    #bio {
        padding: 55px;
        padding-bottom: 0;
    }
    #name, #email {
        padding: 3px;
    }
    /* footer */
    #social-networks i {
        font-size: 350%;
    }

    /* gallery and reviews section */
    /* Gallery */
    .gallery-section > h3 {
        font-size: 55px;
    }
    #gallery > img {
        padding: 75px;
    }
    #gallery {
        line-height: 4rem;
    }

    /* review */
    .review-section > h3 {
        font-size: 55px;
    }
    #review > img {
        padding: 75px;
    }
    #review {
        line-height: 5rem;
    }
    .thank-you {
        margin-top: 40px;
        font-size: 35px;
    }
}
/* Media Query for Laptops and larger */
@media screen and (min-width:1200px) {
    /* heading */
    nav {
        padding: 1rem;
    }
    nav > a {
        font-size: 400%;
    }
    header a {
        font-weight: 700;
        font-size: 24px;
    }
    #menu {
        font-size: 300%;
    }
    #menu > li {
        padding-left: 3rem;
    }
    /* bio */
    #bio {
        padding: 65px;
        padding-bottom: 0;
    }
    /* treatments */
    #treatments-£ {
        padding-top: 10px;
        padding-bottom: 10px;
    }
    .thank-you {
        margin-top: 45px;
        font-size: 40px;
    }
}

